# reth-core

./: CHANGELOG.md  Cargo.toml  cliff.toml  deny.toml
crates/codecs/: Cargo.toml
crates/codecs-derive/: Cargo.toml
crates/codecs-derive/src/: arbitrary.rs
crates/codecs/src/: compress.rs  lib.rs
crates/codecs/src/alloy/: header.rs  mod.rs
crates/codecs/src/alloy/transaction/: mod.rs
crates/codecs/src/compress/: mod.rs  scale.rs
crates/primitives-traits/: Cargo.toml
crates/primitives-traits/src/: account.rs  lib.rs  node.rs  proofs.rs  storage.rs
crates/primitives-traits/src/block/: bal.rs  body.rs  error.rs  header.rs  mod.rs  recovered.rs  sealed.rs  sealed_or_recovered.rs  serde_helpers.rs
crates/primitives-traits/src/header/: header_mut.rs  sealed.rs
crates/primitives-traits/src/transaction/: error.rs  mod.rs  signed.rs
crates/rpc-convert/: Cargo.toml
crates/rpc-convert/src/: lib.rs
